--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,13 +23,17 @@ requirements:
     - {{ posix }}zip               # [win]
   host:
     - r-base
+    - r-data.tree
     - r-htmlwidgets >=0.3.2
     - r-igraph
+    - r-jsonlite
     - r-magrittr
   run:
     - r-base
+    - r-data.tree
     - r-htmlwidgets >=0.3.2
     - r-igraph
+    - r-jsonlite
     - r-magrittr
 
 test:
@@ -42,7 +46,8 @@ about:
   license: GPL-3.0-or-later
   summary: Creates 'D3' 'JavaScript' network, tree, dendrogram, and Sankey graphs from 'R'.
   license_family: GPL3
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file:
+    - '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
 
 extra:
   recipe-maintainers:
